--- a/Programa_De_Evento (Antônio).csproj
+++ b/Programa_De_Evento (Antônio).csproj
@@ -119,6 +119,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Fornecedores%28CLIENTE%29.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Fornecedores%28CLIENTE%29.Designer.cs">
+      <DependentUpon>Fornecedores%28CLIENTE%29.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tela_Ajuda.cs">
@@ -138,6 +144,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Fornecedores%28CLIENTE%29.resx">
+      <DependentUpon>Fornecedores%28CLIENTE%29.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
