--- a/Programa_De_Evento (Antônio).csproj
+++ b/Programa_De_Evento (Antônio).csproj
@@ -125,6 +125,12 @@
     <Compile Include="Fornecedores%28CLIENTE%29.Designer.cs">
       <DependentUpon>Fornecedores%28CLIENTE%29.cs</DependentUpon>
     </Compile>
+    <Compile Include="MENUSTRIP%28CLIENTE%29.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MENUSTRIP%28CLIENTE%29.Designer.cs">
+      <DependentUpon>MENUSTRIP%28CLIENTE%29.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tela_Ajuda.cs">
@@ -147,6 +153,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Fornecedores%28CLIENTE%29.resx">
       <DependentUpon>Fornecedores%28CLIENTE%29.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MENUSTRIP%28CLIENTE%29.resx">
+      <DependentUpon>MENUSTRIP%28CLIENTE%29.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
