--- a/Programa_De_Evento (Antônio).csproj
+++ b/Programa_De_Evento (Antônio).csproj
@@ -113,17 +113,23 @@
     <Compile Include="Evento.Designer.cs">
       <DependentUpon>Evento.cs</DependentUpon>
     </Compile>
-    <Compile Include="Form1.cs">
+    <Compile Include="TelaInicial.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="Form1.Designer.cs">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <Compile Include="TelaInicial.Designer.cs">
+      <DependentUpon>TelaInicial.cs</DependentUpon>
     </Compile>
     <Compile Include="Fornecedores%28CLIENTE%29.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Fornecedores%28CLIENTE%29.Designer.cs">
       <DependentUpon>Fornecedores%28CLIENTE%29.cs</DependentUpon>
+    </Compile>
+    <Compile Include="MENUSTRIP%28ADMIN%29cs.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MENUSTRIP%28ADMIN%29cs.Designer.cs">
+      <DependentUpon>MENUSTRIP%28ADMIN%29cs.cs</DependentUpon>
     </Compile>
     <Compile Include="MENUSTRIP%28CLIENTE%29.cs">
       <SubType>Form</SubType>
@@ -148,11 +154,14 @@
     <EmbeddedResource Include="Evento.resx">
       <DependentUpon>Evento.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="Form1.resx">
-      <DependentUpon>Form1.cs</DependentUpon>
+    <EmbeddedResource Include="TelaInicial.resx">
+      <DependentUpon>TelaInicial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Fornecedores%28CLIENTE%29.resx">
       <DependentUpon>Fornecedores%28CLIENTE%29.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MENUSTRIP%28ADMIN%29cs.resx">
+      <DependentUpon>MENUSTRIP%28ADMIN%29cs.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MENUSTRIP%28CLIENTE%29.resx">
       <DependentUpon>MENUSTRIP%28CLIENTE%29.cs</DependentUpon>
